--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@
     font-style: normal;
     font-weight: normal;
     font-size: 50px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 3px black;
 }
 .elenco{
     margin: auto;
